fix: eye icon not centered on component input password

--- a/project/modules/form/code/scss/input/input.scss
+++ b/project/modules/form/code/scss/input/input.scss
@@ -45,8 +45,9 @@
 		}
 	}
 	.eye.pragmate-icon-button {
-		// position: absolute;
-		// right: 0.5rem;
+		position: relative;
+		top: -0.1rem;
+		right: 0.5rem;
 		svg.pragmate-icon {
 			width: 20px;
 			height: 20px;
